สร้างโดยใช้ Colab

--- a/notion_expense_sync_final.ipynb
+++ b/notion_expense_sync_final.ipynb
@@ -17,11 +17,11 @@
         "!pip install gspread oauth2client notion-client python-dotenv"
       ],
       "metadata": {
-        "id": "2-5MXm71OU7O",
-        "outputId": "1c46885a-d186-4a91-efaf-8f3923a33782",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2-5MXm71OU7O",
+        "outputId": "1c46885a-d186-4a91-efaf-8f3923a33782"
       },
       "execution_count": 51,
       "outputs": [
@@ -62,36 +62,40 @@
     {
       "cell_type": "code",
       "source": [
-        "# 🔢 Block 2: Mount Google Drive และโหลดไฟล์ .env\n",
+        "# 🔢 Block 2: Mount Google Drive และโหลด .env\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
         "from dotenv import load_dotenv\n",
         "import os\n",
         "\n",
-        "# กำหนด path ไปยังไฟล์ .env ที่อยู่ใน Google Drive\n",
-        "env_path = '/content/drive/MyDrive/Automation_Keys/Notion_Expense/.env'\n",
-        "load_dotenv(dotenv_path=env_path)\n",
+        "# ✅ แก้ตรงนี้ให้ถูก\n",
+        "env_path = \"/content/drive/MyDrive/GAS_Automation_Hub/Automation_Keys/Notion_Expense/.env\"  # ← ใส่จุดนำหน้า\n",
+        "load_dotenv(dotenv_path=env_path, override=True)\n",
         "\n",
-        "# โหลดค่า ENV ที่จำเป็น\n",
+        "# โหลดตัวแปรจาก .env\n",
+        "SHEET_ID = os.getenv(\"SHEET_ID\")\n",
         "NOTION_TOKEN = os.getenv(\"NOTION_TOKEN\")\n",
         "NOTION_DB_ID = os.getenv(\"NOTION_DB_ID\")\n",
-        "SHEET_ID = os.getenv(\"SHEET_ID\")"
+        "\n",
+        "# 🔍 ทดสอบ\n",
+        "print(\"✅ SHEET_ID =\", SHEET_ID)\n"
       ],
       "metadata": {
-        "id": "Zh2528A8OYey",
-        "outputId": "e727b476-8c17-4f72-9ff0-1f1cce58c638",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Zh2528A8OYey",
+        "outputId": "2fa22a70-d414-4cfd-94b0-4f68e00c69bb"
       },
-      "execution_count": 52,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "✅ SHEET_ID = 1j9GE9KsQnZdUVohsDJ9e97FDqQC-g1-Cv81L1olnHu4\n"
           ]
         }
       ]
@@ -99,43 +103,60 @@
     {
       "cell_type": "code",
       "source": [
-        "# 🔢 Block 3: เชื่อม Google Sheets ด้วย service_account.json\n",
+        "!ls \"/content/drive/MyDrive/GAS_Automation_Hub/Automation_Keys/Notion_Expense\""
+      ],
+      "metadata": {
+        "id": "HkKxCvzvPKvW",
+        "outputId": "9b25f91a-b055-4bdf-ab5e-158e147b0dfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " env   service_account.json  'Untitled document.gdoc'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 🔢 Block 3: เชื่อม Google Sheets\n",
+        "\n",
         "import gspread\n",
         "from oauth2client.service_account import ServiceAccountCredentials\n",
         "\n",
-        "# กำหนด scope ที่ใช้สำหรับ Google Sheets และ Drive\n",
         "scope = [\"https://spreadsheets.google.com/feeds\", \"https://www.googleapis.com/auth/drive\"]\n",
         "\n",
-        "# ใช้ path เดียวกับ .env เพื่อโหลด service_account.json\n",
-        "service_account_path = os.path.join(os.path.dirname(env_path), \"service_account.json\")\n",
+        "# ❗ แก้ path ให้ตรงกับไฟล์จริง\n",
+        "service_account_path = \"/content/drive/MyDrive/GAS_Automation_Hub/Automation_Keys/Notion_Expense/service_account.json\"\n",
         "\n",
-        "# เชื่อมต่อกับ Google Sheets\n",
+        "# เชื่อม Google Sheets\n",
         "creds = ServiceAccountCredentials.from_json_keyfile_name(service_account_path, scope)\n",
         "client = gspread.authorize(creds)\n",
         "sheet = client.open_by_key(SHEET_ID).sheet1\n",
         "\n",
-        "print(\"✅ เชื่อม Google Sheet สำเร็จ:\", sheet.title)"
+        "print(\"✅ เชื่อม Google Sheet สำเร็จ:\", sheet.title)\n"
       ],
       "metadata": {
-        "id": "2aveA6LyOc0x",
-        "outputId": "0fdc383c-95a9-4fcd-8e97-a830af035d14",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 347
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2aveA6LyOc0x",
+        "outputId": "4ffbbfe4-ae6d-469a-c7d7-d5aec7e29df5"
       },
-      "execution_count": 53,
+      "execution_count": 73,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: '/content/drive/MyDrive/Automation_Keys/Notion_Expense/service_account.json'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-53-2431612817.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# เชื่อมต่อกับ Google Sheets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mcreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mServiceAccountCredentials\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_json_keyfile_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mservice_account_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscope\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mclient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgspread\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mauthorize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcreds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0msheet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_by_key\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSHEET_ID\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msheet1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/oauth2client/service_account.py\u001b[0m in \u001b[0;36mfrom_json_keyfile_name\u001b[0;34m(cls, filename, scopes, token_uri, revoke_uri)\u001b[0m\n\u001b[1;32m    217\u001b[0m                 \u001b[0mthe\u001b[0m \u001b[0mkeyfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m         \"\"\"\n\u001b[0;32m--> 219\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile_obj\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    220\u001b[0m             \u001b[0mclient_credentials\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_obj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m         return cls._from_parsed_json_keyfile(client_credentials, scopes,\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/MyDrive/Automation_Keys/Notion_Expense/service_account.json'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ เชื่อม Google Sheet สำเร็จ: Sheet1\n"
           ]
         }
       ]
