สร้างโดยใช้ Colab

--- a/notion_expense_sync_final.ipynb
+++ b/notion_expense_sync_final.ipynb
@@ -21,9 +21,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2-5MXm71OU7O",
-        "outputId": "1c46885a-d186-4a91-efaf-8f3923a33782"
+        "outputId": "7321be4b-4eb9-43b1-8e98-ef689319a089"
       },
-      "execution_count": 51,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,9 +86,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zh2528A8OYey",
-        "outputId": "2fa22a70-d414-4cfd-94b0-4f68e00c69bb"
+        "outputId": "a2aa5265-bb54-4428-a43a-419336013a09"
       },
-      "execution_count": 72,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,19 +106,19 @@
         "!ls \"/content/drive/MyDrive/GAS_Automation_Hub/Automation_Keys/Notion_Expense\""
       ],
       "metadata": {
-        "id": "HkKxCvzvPKvW",
-        "outputId": "9b25f91a-b055-4bdf-ab5e-158e147b0dfc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HkKxCvzvPKvW",
+        "outputId": "5929fc76-124b-4268-b398-73387a027d2d"
       },
-      "execution_count": 62,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " env   service_account.json  'Untitled document.gdoc'\n"
+            " service_account.json  'Untitled document.gdoc'\n"
           ]
         }
       ]
@@ -148,9 +148,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2aveA6LyOc0x",
-        "outputId": "4ffbbfe4-ae6d-469a-c7d7-d5aec7e29df5"
+        "outputId": "ae6d5c34-6097-4644-89f0-c1c28012e53f"
       },
-      "execution_count": 73,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "uKGa2gKROfp0"
       },
-      "execution_count": 54,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "9gDNS0rOOiLk"
       },
-      "execution_count": 55,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "E_XToz7EOksA"
       },
-      "execution_count": 56,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "tYmsUgxlOm2p"
       },
-      "execution_count": 57,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -299,7 +299,7 @@
       "metadata": {
         "id": "vnOU2UnZOpre"
       },
-      "execution_count": 58,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -320,7 +320,7 @@
       "metadata": {
         "id": "gml3_-3HOsEh"
       },
-      "execution_count": 59,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -363,7 +363,7 @@
       "metadata": {
         "id": "UER_4X-IOuLx"
       },
-      "execution_count": 60,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -408,7 +408,87 @@
       "metadata": {
         "id": "vvFHLltnOx3F"
       },
-      "execution_count": 61,
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 🔧 ติดตั้ง SDK เวอร์ชันเดิม (รองรับ LineBotApi, WebhookHandler)\n",
+        "!pip install line-bot-sdk==1.20.0"
+      ],
+      "metadata": {
+        "id": "YntS--NiS6pG",
+        "outputId": "37850d69-5d3a-41b5-bfbe-f591650ab3a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: line-bot-sdk==1.20.0 in /usr/local/lib/python3.11/dist-packages (1.20.0)\n",
+            "Requirement already satisfied: requests>=2.0 in /usr/local/lib/python3.11/dist-packages (from line-bot-sdk==1.20.0) (2.32.3)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.11/dist-packages (from line-bot-sdk==1.20.0) (1.0.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.0->line-bot-sdk==1.20.0) (3.4.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.0->line-bot-sdk==1.20.0) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.0->line-bot-sdk==1.20.0) (2.4.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.0->line-bot-sdk==1.20.0) (2025.6.15)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Block 12: LINE Messaging API แบบคลาสสิก (v1.x)\n",
+        "from linebot import LineBotApi, WebhookHandler\n",
+        "from linebot.models import MessageEvent, TextMessage, TextSendMessage\n",
+        "import os\n",
+        "\n",
+        "LINE_CHANNEL_ACCESS_TOKEN = os.getenv(\"LINE_TOKEN\")\n",
+        "LINE_CHANNEL_SECRET = os.getenv(\"LINE_CHANNEL_SECRET\")\n",
+        "\n",
+        "line_bot_api = LineBotApi(LINE_CHANNEL_ACCESS_TOKEN)\n",
+        "handler = WebhookHandler(LINE_CHANNEL_SECRET)"
+      ],
+      "metadata": {
+        "id": "xRcDCX19Sm0u"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 🔢 Block 13: Handle ข้อความจาก LINE + log + ตอบกลับ\n",
+        "@handler.add(MessageEvent, message=TextMessage)\n",
+        "def handle_message(event):\n",
+        "    user_id = event.source.user_id\n",
+        "    msg = event.message.text\n",
+        "\n",
+        "    # ✅ Log ข้อความจาก user\n",
+        "    log_conversation(user_id, \"user\", msg)\n",
+        "\n",
+        "    # ✅ ตอบกลับด้วยฟังก์ชันรวม\n",
+        "    reply = log_and_sync_message(user_id, msg)\n",
+        "\n",
+        "    # ✅ Log ข้อความจาก bot\n",
+        "    log_conversation(user_id, \"bot\", reply)\n",
+        "\n",
+        "    # ✅ ตอบกลับผ่าน LINE\n",
+        "    line_bot_api.reply_message(\n",
+        "        event.reply_token,\n",
+        "        TextSendMessage(text=reply)\n",
+        "    )"
+      ],
+      "metadata": {
+        "id": "aENRCMuYSrNC"
+      },
+      "execution_count": 15,
       "outputs": []
     }
   ],
