สร้างโดยใช้ Colab

--- a/Reasoning_Format_Fix_And_QC.ipynb
+++ b/Reasoning_Format_Fix_And_QC.ipynb
@@ -36,7 +36,7 @@
         "print(\"✅ Libraries imported\")"
       ],
       "metadata": {
-        "id": "DOnJ2n7bQ5f5"
+        "id": "rMEOTijJTCIk"
       },
       "execution_count": null,
       "outputs": []
@@ -58,8 +58,17 @@
         "\n",
         "print(\"🎯 Configuration loaded\")\n",
         "print(f\"Source: {SRC}\")\n",
-        "print(f\"Output: {DST_FIXED}\")\n",
-        "\n",
+        "print(f\"Output: {DST_FIXED}\")"
+      ],
+      "metadata": {
+        "id": "mOm7SrgGTFqI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# %%\n",
         "# ============================================\n",
         "# Cell 3: Define Mappings & Constants\n",
@@ -120,7 +129,7 @@
         "print(f\"✅ Loaded {len(TIER_MAPPING)} tier mappings\")"
       ],
       "metadata": {
-        "id": "O4GQ9sN_Q-q1"
+        "id": "PxyEKJfaTI_t"
       },
       "execution_count": null,
       "outputs": []
@@ -170,7 +179,7 @@
         "print(f\"✅ Optional fields: {len(OPTIONAL_METADATA_FIELDS)}\")"
       ],
       "metadata": {
-        "id": "jw_c0JGgRC0K"
+        "id": "S16Ky8MGTMF-"
       },
       "execution_count": null,
       "outputs": []
@@ -229,7 +238,7 @@
         "print(\"✅ Basic helper functions defined\")"
       ],
       "metadata": {
-        "id": "5tdx6OQ5RHtr"
+        "id": "cO_TAV8RTP1K"
       },
       "execution_count": null,
       "outputs": []
@@ -305,7 +314,7 @@
         "print(\"✅ Formatting functions defined\")"
       ],
       "metadata": {
-        "id": "XI2pPHynRMHh"
+        "id": "ufMX__f8TUSK"
       },
       "execution_count": null,
       "outputs": []
@@ -319,7 +328,7 @@
         "# ============================================\n",
         "\n",
         "def fix_multilang_section(text: str, section_header: str) -> str:\n",
-        "    \"\"\"Fix multi-language section format\"\"\"\n",
+        "    \"\"\"Fix multi-language section format to use (TH), (EN), (ZH) format\"\"\"\n",
         "\n",
         "    # Find the section\n",
         "    pattern = rf'({section_header}\\s*\\n)(.*?)(?=\\n###|\\n---|\\Z)'\n",
@@ -329,31 +338,58 @@
         "        return text\n",
         "\n",
         "    section_content = match.group(2)\n",
+        "    original_content = section_content\n",
         "\n",
-        "    # Check if it has proper (TH), (EN), (ZH) format\n",
-        "    has_th = '(TH)' in section_content or '**TH**:' in section_content\n",
-        "    has_en = '(EN)' in section_content or '**EN**:' in section_content\n",
+        "    # Convert various formats to standard (TH) format\n",
+        "    # Handle **TH**: format\n",
+        "    section_content = re.sub(r'\\*\\*TH\\*\\*\\s*:', '(TH)', section_content)\n",
+        "    section_content = re.sub(r'\\*\\*EN\\*\\*\\s*:', '(EN)', section_content)\n",
+        "    section_content = re.sub(r'\\*\\*ZH\\*\\*\\s*:', '(ZH)', section_content)\n",
         "\n",
-        "    # Convert **TH**: format to (TH) format\n",
-        "    if '**TH**:' in section_content or '**EN**:' in section_content:\n",
-        "        section_content = section_content.replace('**TH**:', '(TH)')\n",
-        "        section_content = section_content.replace('**EN**:', '(EN)')\n",
-        "        section_content = section_content.replace('**ZH**:', '(ZH)')\n",
+        "    # Handle TH: format (without asterisks)\n",
+        "    section_content = re.sub(r'^TH\\s*:', '(TH)', section_content, flags=re.MULTILINE)\n",
+        "    section_content = re.sub(r'^EN\\s*:', '(EN)', section_content, flags=re.MULTILINE)\n",
+        "    section_content = re.sub(r'^ZH\\s*:', '(ZH)', section_content, flags=re.MULTILINE)\n",
         "\n",
-        "    if not has_th and not has_en:\n",
-        "        # Assume it's Thai if no language markers\n",
-        "        fixed_content = f\"(TH) {section_content.strip()}\\n\"\n",
-        "        fixed_content += \"(EN) [To be translated]\\n\"\n",
-        "        fixed_content += \"(ZH) [To be translated]\"\n",
+        "    # Check if we have language markers now\n",
+        "    has_th = '(TH)' in section_content\n",
+        "    has_en = '(EN)' in section_content\n",
+        "    has_zh = '(ZH)' in section_content\n",
         "\n",
-        "        text = text[:match.start(2)] + fixed_content + text[match.end(2):]\n",
+        "    # If no language markers at all, assume Thai and add structure\n",
+        "    if not has_th and not has_en and not has_zh:\n",
+        "        lines = section_content.strip().split('\\n')\n",
+        "        if lines:\n",
+        "            # Assume first line is Thai\n",
+        "            fixed_content = f\"(TH) {lines[0]}\\n\"\n",
+        "\n",
+        "            # Check if there might be English content\n",
+        "            if len(lines) > 1:\n",
+        "                fixed_content += f\"(EN) {lines[1]}\\n\"\n",
+        "            else:\n",
+        "                fixed_content += \"(EN) [To be translated]\\n\"\n",
+        "\n",
+        "            # Add Chinese placeholder\n",
+        "            if len(lines) > 2:\n",
+        "                fixed_content += f\"(ZH) {lines[2]}\"\n",
+        "            else:\n",
+        "                fixed_content += \"(ZH) [To be translated]\"\n",
+        "\n",
+        "            section_content = fixed_content\n",
+        "\n",
+        "    # Ensure all three languages are present\n",
+        "    if not has_zh and '(ZH)' not in section_content:\n",
+        "        section_content = section_content.rstrip() + \"\\n(ZH) [To be translated]\"\n",
+        "\n",
+        "    # Replace in original text\n",
+        "    text = text[:match.start(2)] + section_content + text[match.end(2):]\n",
         "\n",
         "    return text\n",
         "\n",
         "print(\"✅ Content processing functions defined\")"
       ],
       "metadata": {
-        "id": "CifhfVdCRPX_"
+        "id": "wlJm23YOTX5K"
       },
       "execution_count": null,
       "outputs": []
@@ -428,7 +464,7 @@
         "print(\"✅ Main fix function defined\")"
       ],
       "metadata": {
-        "id": "pTTSEFCNRUra"
+        "id": "Bz5TUpmcTata"
       },
       "execution_count": null,
       "outputs": []
@@ -464,7 +500,7 @@
         "print(f\"📦 Found {len(blocks)} blocks\")"
       ],
       "metadata": {
-        "id": "SzFi3kOyRZle"
+        "id": "oul6blcaTdyy"
       },
       "execution_count": null,
       "outputs": []
@@ -491,7 +527,7 @@
         "print(f\"✅ Fixed {len(fixed_blocks)} blocks\")"
       ],
       "metadata": {
-        "id": "q_s4nC_KRcyj"
+        "id": "n0qcRkQZTkJM"
       },
       "execution_count": null,
       "outputs": []
@@ -519,7 +555,7 @@
         "print(\"✅ File saved!\")"
       ],
       "metadata": {
-        "id": "F-96wCBSRfUg"
+        "id": "NEBnEjHWTm9l"
       },
       "execution_count": null,
       "outputs": []
@@ -597,7 +633,7 @@
         "        print(f\"    {rtype.replace('type_', '')}: {count}\")"
       ],
       "metadata": {
-        "id": "ALFYKHBCRjcU"
+        "id": "S5ONOIGvTqg6"
       },
       "execution_count": null,
       "outputs": []
@@ -623,7 +659,7 @@
         "print(\"\\n✅ COMPLETE! File saved to:\", DST_FIXED)"
       ],
       "metadata": {
-        "id": "JCJgILipRmQq"
+        "id": "Qiqk5LwETtKn"
       },
       "execution_count": null,
       "outputs": []
