สร้างโดยใช้ Colab

--- a/Add redundancy checker for 46-type dataset.ipynb
+++ b/Add redundancy checker for 46-type dataset.ipynb
@@ -14,6 +14,11 @@
       "cell_type": "code",
       "source": [
         "# ============================================\n",
+        "# REDUNDANCY CHECKER FIXED VERSION\n",
+        "# แก้ปัญหา tier ที่เป็น '13B' และ error อื่นๆ\n",
+        "# ============================================\n",
+        "\n",
+        "# ============================================\n",
         "# 📌 Block 1: Setup & Mount\n",
         "# ติดตั้งไลบรารี + Mount Google Drive\n",
         "# ============================================\n",
@@ -34,10 +39,12 @@
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "from tqdm import tqdm\n",
         "import warnings\n",
-        "warnings.filterwarnings('ignore')"
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "print(\"✅ Libraries loaded\")"
       ],
       "metadata": {
-        "id": "mPeSsVT2gy77"
+        "id": "El9NnEM8WJZO"
       },
       "execution_count": null,
       "outputs": []
@@ -68,10 +75,12 @@
         "        'philosophical_logic': [0.45, 0.30, 0.20],\n",
         "        # Default สำหรับ type อื่น ๆ\n",
         "        'default': [0.65, 0.50, 0.35]\n",
-        "    }"
+        "    }\n",
+        "\n",
+        "print(\"✅ Config loaded\")"
       ],
       "metadata": {
-        "id": "RjNEQ60Gg2RM"
+        "id": "Ap0AljqXWPpE"
       },
       "execution_count": null,
       "outputs": []
@@ -135,15 +144,39 @@
         "                prompt_data = DataExtractor.parse_block(block)\n",
         "                prompt_data['file'] = file_path.name\n",
         "                prompt_data['prompt_id'] = f\"{file_path.stem}_p{i+1:03d}\"\n",
+        "\n",
+        "                # Clean tier value (handle '13B' case)\n",
+        "                if 'tier' in prompt_data:\n",
+        "                    tier_val = prompt_data['tier']\n",
+        "                    # ถ้า tier เป็น '13B' หรือค่าที่มี 'B' ให้ใช้ default tier\n",
+        "                    if 'B' in str(tier_val).upper():\n",
+        "                        prompt_data['model_size'] = tier_val\n",
+        "                        prompt_data['tier'] = '2'  # Default tier\n",
+        "                    elif not str(tier_val).isdigit():\n",
+        "                        prompt_data['tier'] = '2'  # Default if not numeric\n",
+        "                    else:\n",
+        "                        # Convert to int to validate\n",
+        "                        try:\n",
+        "                            tier_int = int(tier_val)\n",
+        "                            if tier_int > 6:\n",
+        "                                prompt_data['model_size'] = f\"{tier_int}B\"\n",
+        "                                prompt_data['tier'] = '2'\n",
+        "                            else:\n",
+        "                                prompt_data['tier'] = str(tier_int)\n",
+        "                        except:\n",
+        "                            prompt_data['tier'] = '2'\n",
+        "\n",
         "                all_prompts.append(prompt_data)\n",
         "\n",
         "            if max_prompts and len(all_prompts) >= max_prompts:\n",
         "                break\n",
         "\n",
-        "        return pd.DataFrame(all_prompts)"
+        "        return pd.DataFrame(all_prompts)\n",
+        "\n",
+        "print(\"✅ Data Extractor ready\")"
       ],
       "metadata": {
-        "id": "AzLPfcv7g4mQ"
+        "id": "NHb6UEBVWTYK"
       },
       "execution_count": null,
       "outputs": []
@@ -152,7 +185,7 @@
       "cell_type": "code",
       "source": [
         "# ============================================\n",
-        "# 📌 Block 4: Redundancy Analysis\n",
+        "# 📌 Block 4: Redundancy Analysis - FIXED\n",
         "# วิเคราะห์ความซ้ำซ้อนของ prompt ด้วย TF-IDF + cosine similarity\n",
         "# ============================================\n",
         "class RedundancyAnalyzer:\n",
@@ -161,9 +194,41 @@
         "        self.config = config\n",
         "        self.similarity_matrices = {}\n",
         "\n",
+        "        # Clean tier column\n",
+        "        if 'tier' in self.df.columns:\n",
+        "            self.df['tier'] = self.df['tier'].apply(self.clean_tier_value)\n",
+        "\n",
+        "    def clean_tier_value(self, tier_val):\n",
+        "        \"\"\"Clean tier value to ensure it's numeric 1-6\"\"\"\n",
+        "        if pd.isna(tier_val):\n",
+        "            return 2\n",
+        "\n",
+        "        tier_str = str(tier_val)\n",
+        "\n",
+        "        # Handle '13B' or similar cases\n",
+        "        if 'B' in tier_str.upper():\n",
+        "            return 2  # Default tier for model sizes\n",
+        "\n",
+        "        # Try to extract numeric value\n",
+        "        try:\n",
+        "            tier_num = int(re.search(r'\\d+', tier_str).group())\n",
+        "            if 1 <= tier_num <= 6:\n",
+        "                return tier_num\n",
+        "            else:\n",
+        "                return 2  # Default if out of range\n",
+        "        except:\n",
+        "            return 2  # Default if can't parse\n",
+        "\n",
         "    def get_threshold(self, reasoning_type, tier):\n",
         "        \"\"\"ดึง threshold ตาม reasoning_type และ tier\"\"\"\n",
+        "        # Ensure tier is int\n",
+        "        try:\n",
+        "            tier = int(tier)\n",
+        "        except:\n",
+        "            tier = 2\n",
+        "\n",
         "        tier_idx = min((tier-1)//2, 2)\n",
+        "\n",
         "        if reasoning_type in self.config.THRESHOLDS:\n",
         "            thresholds = self.config.THRESHOLDS[reasoning_type]\n",
         "        else:\n",
@@ -172,19 +237,27 @@
         "\n",
         "    def calculate_similarity_batch(self, df_batch, text_col='prompt_en'):\n",
         "        \"\"\"คำนวณ similarity สำหรับ batch\"\"\"\n",
+        "        # Use prompt_th as fallback if prompt_en doesn't exist\n",
+        "        if text_col not in df_batch.columns or df_batch[text_col].isna().all():\n",
+        "            text_col = 'prompt_th'\n",
+        "\n",
         "        valid_df = df_batch[df_batch[text_col].notna()].reset_index(drop=True)\n",
         "        if len(valid_df) < 2:\n",
         "            return None, []\n",
         "\n",
         "        # TF-IDF\n",
-        "        vectorizer = TfidfVectorizer(\n",
-        "            max_features=500,\n",
-        "            ngram_range=(1, 3),\n",
-        "            min_df=2,\n",
-        "            max_df=0.95\n",
-        "        )\n",
-        "        tfidf_matrix = vectorizer.fit_transform(valid_df[text_col])\n",
-        "        sim_matrix = cosine_similarity(tfidf_matrix)\n",
+        "        try:\n",
+        "            vectorizer = TfidfVectorizer(\n",
+        "                max_features=500,\n",
+        "                ngram_range=(1, 3),\n",
+        "                min_df=1,  # Changed from 2 to 1 for small datasets\n",
+        "                max_df=0.95\n",
+        "            )\n",
+        "            tfidf_matrix = vectorizer.fit_transform(valid_df[text_col])\n",
+        "            sim_matrix = cosine_similarity(tfidf_matrix)\n",
+        "        except Exception as e:\n",
+        "            print(f\"⚠️ Error in TF-IDF: {e}\")\n",
+        "            return None, []\n",
         "\n",
         "        # หา pair ที่เกิน threshold\n",
         "        pairs = []\n",
@@ -192,9 +265,11 @@
         "            for j in range(i+1, len(sim_matrix)):\n",
         "                row_i = valid_df.iloc[i]\n",
         "                row_j = valid_df.iloc[j]\n",
+        "\n",
         "                tier_i = int(row_i.get('tier', 2))\n",
         "                tier_j = int(row_j.get('tier', 2))\n",
         "                type_i = row_i.get('reasoning_type', 'default')\n",
+        "\n",
         "                threshold = self.get_threshold(type_i, max(tier_i, tier_j))\n",
         "\n",
         "                if sim_matrix[i][j] >= threshold:\n",
@@ -209,8 +284,8 @@
         "                        'type2': row_j.get('reasoning_type', 'default'),\n",
         "                        'tier1': tier_i,\n",
         "                        'tier2': tier_j,\n",
-        "                        'prompt1': row_i[text_col][:100],\n",
-        "                        'prompt2': row_j[text_col][:100]\n",
+        "                        'prompt1': row_i[text_col][:100] if text_col in row_i.index else 'N/A',\n",
+        "                        'prompt2': row_j[text_col][:100] if text_col in row_j.index else 'N/A'\n",
         "                    })\n",
         "        return sim_matrix, pairs\n",
         "\n",
@@ -245,10 +320,12 @@
         "                    'std': value_counts.std(),\n",
         "                    'imbalance_ratio': value_counts.max() / value_counts.min() if value_counts.min() > 0 else float('inf')\n",
         "                }\n",
-        "        return stats"
+        "        return stats\n",
+        "\n",
+        "print(\"✅ Redundancy Analyzer ready\")"
       ],
       "metadata": {
-        "id": "GX5XQeb_hIyL"
+        "id": "0BzPoBtXWYOO"
       },
       "execution_count": null,
       "outputs": []
@@ -258,7 +335,7 @@
       "source": [
         "# ============================================\n",
         "# 📌 Block 5: Fix Suggestions\n",
-        "# สร้างข้อเสนอแนะแก้ไขสำหรับคู่ prompt ที่ซ้ำ (เปลี่ยนโดเมน/ความซับซ้อน/มุมคำถาม)\n",
+        "# สร้างข้อเสนอแนะแก้ไขสำหรับคู่ prompt ที่ซ้ำ\n",
         "# ============================================\n",
         "class RedundancyFixer:\n",
         "    @staticmethod\n",
@@ -298,10 +375,12 @@
         "                'fixes': fix_options\n",
         "            })\n",
         "\n",
-        "        return suggestions"
+        "        return suggestions\n",
+        "\n",
+        "print(\"✅ Fixer ready\")"
       ],
       "metadata": {
-        "id": "sGVpdfJBhPNZ"
+        "id": "HkteEe2BWa9M"
       },
       "execution_count": null,
       "outputs": []
@@ -364,11 +443,13 @@
         "                        'Priority': fix['priority'],\n",
         "                        'Description': fix['description']\n",
         "                    })\n",
-        "            pd.DataFrame(fix_data).to_excel(writer, sheet_name='Fix_Suggestions', index=False)\n",
+        "            if fix_data:\n",
+        "                pd.DataFrame(fix_data).to_excel(writer, sheet_name='Fix_Suggestions', index=False)\n",
         "\n",
         "            # Sheet 5: Gaps Analysis\n",
         "            gaps = ReportGenerator.find_gaps(df)\n",
-        "            pd.DataFrame(gaps).to_excel(writer, sheet_name='Gaps', index=False)\n",
+        "            if gaps:\n",
+        "                pd.DataFrame(gaps).to_excel(writer, sheet_name='Gaps', index=False)\n",
         "\n",
         "        print(f\"✅ Report saved to: {output_path}\")\n",
         "\n",
@@ -395,10 +476,12 @@
         "                            'Gap': 10 - count\n",
         "                        })\n",
         "\n",
-        "        return gaps"
+        "        return gaps\n",
+        "\n",
+        "print(\"✅ Report Generator ready\")"
       ],
       "metadata": {
-        "id": "oP_2JCcOhR-P"
+        "id": "y1EScp2LWep7"
       },
       "execution_count": null,
       "outputs": []
@@ -426,6 +509,7 @@
         "\n",
         "    # 2. Tier distribution\n",
         "    if 'tier' in df.columns:\n",
+        "        # Ensure tier values are clean\n",
         "        tier_counts = df['tier'].value_counts().sort_index()\n",
         "        tier_counts.plot(kind='bar', ax=axes[0,1], color='lightgreen')\n",
         "        axes[0,1].set_title('Tier Distribution')\n",
@@ -457,26 +541,32 @@
         "\n",
         "    # 6. Redundancy by Type\n",
         "    if similar_pairs and 'reasoning_type' in df.columns:\n",
-        "        from collections import defaultdict\n",
         "        redundancy_by_type = defaultdict(int)\n",
         "        for pair in similar_pairs:\n",
         "            redundancy_by_type[pair['type1']] += 1\n",
         "\n",
-        "        top_redundant = dict(sorted(redundancy_by_type.items(),\n",
-        "                                   key=lambda x: x[1], reverse=True)[:10])\n",
-        "        axes[1,2].bar(range(len(top_redundant)), list(top_redundant.values()),\n",
-        "                     color='salmon')\n",
-        "        axes[1,2].set_xticks(range(len(top_redundant)))\n",
-        "        axes[1,2].set_xticklabels(list(top_redundant.keys()), rotation=45, ha='right')\n",
-        "        axes[1,2].set_title('Top 10 Types with Redundancy')\n",
-        "        axes[1,2].set_ylabel('Redundant Pairs')\n",
+        "        if redundancy_by_type:\n",
+        "            top_redundant = dict(sorted(redundancy_by_type.items(),\n",
+        "                                       key=lambda x: x[1], reverse=True)[:10])\n",
+        "            axes[1,2].bar(range(len(top_redundant)), list(top_redundant.values()),\n",
+        "                         color='salmon')\n",
+        "            axes[1,2].set_xticks(range(len(top_redundant)))\n",
+        "            axes[1,2].set_xticklabels(list(top_redundant.keys()), rotation=45, ha='right')\n",
+        "            axes[1,2].set_title('Top 10 Types with Redundancy')\n",
+        "            axes[1,2].set_ylabel('Redundant Pairs')\n",
         "\n",
         "    plt.tight_layout()\n",
-        "    plt.savefig('/content/redundancy_analysis.png', dpi=150, bbox_inches='tight')\n",
-        "    plt.show()"
+        "\n",
+        "    # Save figure\n",
+        "    output_path = '/content/redundancy_analysis.png'\n",
+        "    plt.savefig(output_path, dpi=150, bbox_inches='tight')\n",
+        "    print(f\"📊 Visualization saved to: {output_path}\")\n",
+        "    plt.show()\n",
+        "\n",
+        "print(\"✅ Visualization ready\")"
       ],
       "metadata": {
-        "id": "znEoPg0mhXlF"
+        "id": "7M750KYdWhp5"
       },
       "execution_count": null,
       "outputs": []
@@ -507,7 +597,14 @@
         "    print(\"\\n📋 Dataset Info:\")\n",
         "    print(f\"  Files: {df['file'].nunique()}\")\n",
         "    print(f\"  Types: {df['reasoning_type'].nunique() if 'reasoning_type' in df.columns else 'N/A'}\")\n",
-        "    print(f\"  Tiers: {df['tier'].unique().tolist() if 'tier' in df.columns else 'N/A'}\")\n",
+        "\n",
+        "    if 'tier' in df.columns:\n",
+        "        unique_tiers = df['tier'].unique().tolist()\n",
+        "        print(f\"  Tiers: {sorted([t for t in unique_tiers if str(t).isdigit()])}\")\n",
+        "\n",
+        "    # Check for model_size column\n",
+        "    if 'model_size' in df.columns:\n",
+        "        print(f\"  Model sizes: {df['model_size'].dropna().unique().tolist()}\")\n",
         "\n",
         "    # Analyze redundancy\n",
         "    print(\"\\n🔍 Analyzing redundancy...\")\n",
@@ -540,7 +637,11 @@
         "    print(f\"\\n📊 Summary:\")\n",
         "    print(f\"  Total Prompts: {len(df)}\")\n",
         "    print(f\"  Redundant Pairs: {len(similar_pairs)}\")\n",
-        "    print(f\"  Redundancy Rate: {len(similar_pairs) / (len(df)*(len(df)-1)/2) * 100:.2f}%\")\n",
+        "\n",
+        "    if len(df) > 1:\n",
+        "        max_pairs = len(df) * (len(df) - 1) / 2\n",
+        "        redundancy_rate = len(similar_pairs) / max_pairs * 100\n",
+        "        print(f\"  Redundancy Rate: {redundancy_rate:.2f}%\")\n",
         "\n",
         "    if stats.get('reasoning_type'):\n",
         "        print(f\"  Type Imbalance: {stats['reasoning_type']['imbalance_ratio']:.2f}x\")\n",
@@ -549,10 +650,12 @@
         "    print(f\"  - {report_path}\")\n",
         "    print(f\"  - /content/redundancy_analysis.png\")\n",
         "\n",
-        "    return df, similar_pairs, stats"
+        "    return df, similar_pairs, stats\n",
+        "\n",
+        "print(\"✅ All functions ready\")"
       ],
       "metadata": {
-        "id": "znPiIJWVhetj"
+        "id": "pSAH50qLWk58"
       },
       "execution_count": null,
       "outputs": []
@@ -565,10 +668,11 @@
         "# จุดเริ่มรันโปรแกรมหลักใน Colab\n",
         "# ============================================\n",
         "if __name__ == \"__main__\":\n",
-        "    df, pairs, stats = main()"
+        "    df, pairs, stats = main()\n",
+        "    print(\"\\n🎉 Done! Check the output files in your Drive.\")"
       ],
       "metadata": {
-        "id": "LzvbGJ-nhqZt"
+        "id": "3mzlfXWdWpLG"
       },
       "execution_count": null,
       "outputs": []
